resources/assets/sass/modules/_grid.scss
.grid-layout{
    .grid-row {
        -moz-column-width: 18em;
        -webkit-column-width: 18em;
        column-width: 25em;
        margin: 0 10px;
    }

    .grid-item {
        cursor: pointer;
        margin-top:8px;
        display: inline-block;
        width:  100%;
        position: relative;
    }

    .grid-well {
        position:relative;
        display: block;
        overflow:hidden;

        &:hover{
            .grid-gradient{
                transform: translateY(-100%);
            }

            .grid-desc{
                transform: translateY(0%);
            }
        }

        .grid-gradient{
            position:absolute;
            transition:all .5s;
            transform: translateY(-200%);
            height:100%;
            background: rgba(250, 250, 250, .5);
            width:100%;
        }

        img{
            border-radius: 5px;
        }
    }

    .grid-item:hover {
        .grid-desc{
            opacity:1;
        }
    }

    .grid-desc {
        position:absolute;
        top:0;
        right:0;
        left:0;
        padding:15px;
        color:white;
        text-transform: uppercase;
        opacity:0;
        transition: all .5s;
        height:100%;
        transform: translateY(100%);

        .grid-desc-title{
            font-weight: 800;
            display:block;
        }

        .grid-desc-caption{
            font-weight: 800;
            display:block;
            margin-bottom: 8px;
        }

        .grid-desc-author{
            font-size:11px;
            display:block;
        }
    }
}

